--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2%;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1.2rem;
+  height: 12vh;
+  border-bottom: 1px solid #B4AEAE;
+}
+header nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 34vw;
+}
+header nav ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+  width: 20vw;
+}
+header nav ul a {
+  text-decoration: none;
+  color: #4B5563;
+}
+header nav button {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  color: #FFFFFF;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 6px;
+  padding: 20px 35px;
+  background-color: #16A34A;
+}
+header nav button:hover {
+  cursor: pointer;
+  background-color: #21C05C;
+}/*# sourceMappingURL=style.css.map */
