--- a/style.css
+++ b/style.css
@@ -72,6 +72,54 @@ header nav button:hover {
   color: #4B5563;
   margin-bottom: 5%;
 }
+.first-section .text-content .buttons {
+  display: flex;
+  gap: 4%;
+}
+.first-section .text-content .buttons .btn-primary {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  background-color: #16A34A;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 6px;
+  padding: 20px 35px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.first-section .text-content .buttons .btn-primary:hover {
+  cursor: pointer;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.first-section .text-content .buttons .btn-primary img {
+  width: 15%;
+}
+.first-section .text-content .buttons .btn-secondary {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #2563EB;
+  background-color: transparent;
+  border: solid 1px #2563EB;
+  border-radius: 6px;
+  padding: 20px 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.first-section .text-content .buttons .btn-secondary:hover {
+  cursor: pointer;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.first-section .text-content .buttons .btn-secondary img {
+  width: 15%;
+}
 .first-section img {
   width: 30%;
 }/*# sourceMappingURL=style.css.map */
