--- a/style.scss
+++ b/style.scss
@@ -78,6 +78,62 @@ header{
             color: #4B5563;
             margin-bottom: 5%;
         }
+
+        .buttons{
+            display: flex;
+            gap: 4%;
+
+            .btn-primary{
+                font-family: "Poppins", sans-serif;
+                font-weight: 400;
+                font-size: 1rem;
+                background-color: #16A34A;
+                color: #FFFFFF;
+                border: none;
+                border-radius: 6px;
+                padding: 20px 35px;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+                &:hover{
+                    cursor: pointer;
+                    transform: translateY(-4px);
+                    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+                }
+
+                img{
+                    width: 15%;
+                }
+            }
+
+            .btn-secondary{
+                font-family: "Poppins", sans-serif;
+                font-weight: 400;
+                font-size: 1rem;
+                color: #2563EB;
+                background-color: transparent;
+                border: solid 1px #2563EB;
+                border-radius: 6px;
+                padding: 20px 20px;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+
+                &:hover{
+                    cursor: pointer;
+                    transform: translateY(-4px);
+                    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+                }
+
+                img{
+                    width: 15%;
+                }
+            }
+        }
     }
 
     img{
