--- a/style.scss
+++ b/style.scss
@@ -195,11 +195,13 @@ header{
 .fourth-section{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     padding: 1% 5%;
     gap: 2%;
 
     .container{
+        flex: 1;
+        max-width: 32%;
         display: flex;
         flex-direction: column;
         background-color: #F3F5F8;
