--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ header nav button:hover {
 .fifth-section .fifth-section_header {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2%;
+  margin-bottom: 5%;
 }
 .fifth-section .fifth-section_header h2 {
   font-family: "Poppins", sans-serif;
@@ -358,4 +358,223 @@ header nav button:hover {
   color: #4B5563;
   margin-bottom: 4%;
   text-align: center;
+}
+
+.sixth-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  margin-bottom: 5%;
+}
+.sixth-section .sixth-section_card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: 8px;
+  border: 1px solid #9CA3AF;
+  border-left: 5px solid #9CA3AF;
+  flex: 1;
+  max-width: 20%;
+  padding: 2% 3%;
+}
+.sixth-section .sixth-section_card img {
+  width: 50%;
+  margin-bottom: 10%;
+}
+.sixth-section .sixth-section_card p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #4B5563;
+}
+.sixth-section .sixth-section_card .usuario-sixth {
+  display: flex;
+  align-items: center;
+  margin-top: 10%;
+}
+.sixth-section .sixth-section_card .usuario-sixth img {
+  width: 25%;
+  margin-right: 5%;
+  border-radius: 60%;
+}
+.sixth-section .sixth-section_card .usuario-sixth .usuario-sixth_text {
+  display: flex;
+  flex-direction: column;
+}
+.sixth-section .sixth-section_card .usuario-sixth .usuario-sixth_text h5 {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #09090B;
+  margin-bottom: 1%;
+}
+.sixth-section .sixth-section_card .usuario-sixth .usuario-sixth_text p {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: #6B7280;
+}
+
+.seventh-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #F3F5F8;
+  height: 50vh;
+  margin-bottom: 1%;
+}
+.seventh-section h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: #000000;
+  margin-bottom: 2%;
+}
+.seventh-section h3 {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: #000000;
+  margin-bottom: 3%;
+}
+.seventh-section .seventh-button {
+  display: flex;
+  justify-content: center;
+  width: 30%;
+  gap: 5%;
+}
+.seventh-section .seventh-button .seventh-button_p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  background-color: #16A34A;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 6px;
+  padding: 2% 5%;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.seventh-section .seventh-button .seventh-button_p:hover {
+  cursor: pointer;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.seventh-section .seventh-button .seventh-button_q {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #16A34A;
+  background-color: transparent;
+  border: solid 1px #16A34A;
+  border-radius: 6px;
+  padding: 2% 8%;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.seventh-section .seventh-button .seventh-button_q:hover {
+  cursor: pointer;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.octave-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1% 3%;
+  background-color: #1F2937;
+  height: 25vh;
+}
+.octave-section .octave-section_1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.octave-section .octave-section_1 img {
+  width: 40%;
+  margin-bottom: 4%;
+}
+.octave-section .octave-section_1 p {
+  color: #9CA3AF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  width: 20vw;
+}
+.octave-section .octave-section_2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.octave-section .octave-section_2 p {
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  margin-bottom: 10%;
+}
+.octave-section .octave-section_2 ul {
+  list-style: none;
+}
+.octave-section .octave-section_2 ul li {
+  margin-bottom: 2%;
+}
+.octave-section .octave-section_2 ul li a {
+  text-decoration: none;
+  color: #9CA3AF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
+.octave-section .octave-section_3 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.octave-section .octave-section_3 p {
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  margin-bottom: 10%;
+}
+.octave-section .octave-section_3 ul {
+  list-style: none;
+}
+.octave-section .octave-section_3 ul li {
+  margin-bottom: 2%;
+}
+.octave-section .octave-section_3 ul li a {
+  text-decoration: none;
+  color: #9CA3AF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
+.octave-section .octave-section_4 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.octave-section .octave-section_4 .octave-section_text {
+  color: #FFFFFF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  margin-bottom: 2%;
+}
+.octave-section .octave-section_4 .octave-section_text_1 {
+  color: #9CA3AF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  margin-bottom: 4%;
+  width: 20vw;
+}
+.octave-section .octave-section_4 .icons-social-media {
+  display: flex;
+  gap: 6%;
+}
+.octave-section .octave-section_4 .icons-social-media a img {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
