--- a/style.scss
+++ b/style.scss
@@ -307,7 +307,7 @@ header{
     .fifth-section_header{
         display: flex;
         flex-direction: column;
-        margin-bottom: 2%;
+        margin-bottom: 5%;
 
         h2{
             font-family: "Poppins", sans-serif;
@@ -404,3 +404,256 @@ header{
     margin-bottom: 4%;
     text-align: center;
 }
+
+.sixth-section{
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    margin-bottom: 5%;
+
+    .sixth-section_card{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        border-radius: 8px;
+        border: 1px solid #9CA3AF;
+        border-left: 5px solid #9CA3AF;
+        flex: 1;
+        max-width: 20%;
+        padding: 2% 3%;
+
+        img{
+            width: 50%;
+            margin-bottom: 10%;
+        }
+
+        p{
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+            font-size: 1rem;
+            color: #4B5563;
+        }
+
+        .usuario-sixth{
+            display: flex;
+            align-items: center;
+            margin-top: 10%;
+
+            img{
+                width: 25%;
+                margin-right: 5%;
+                border-radius: 60%;
+            }
+
+            .usuario-sixth_text{
+                display: flex;
+                flex-direction: column;
+
+                h5{
+                    font-family: "Inter", sans-serif;
+                    font-weight: 400;
+                    font-size: 1rem;
+                    color: #09090B;
+                    margin-bottom: 1%;
+                }
+
+                p{
+                    font-family: "Inter", sans-serif;
+                    font-weight: 400;
+                    font-size: 0.875rem;
+                    color: #6B7280;
+                }
+            }
+        }
+    }
+}
+
+.seventh-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #F3F5F8;
+    height: 50vh;
+    margin-bottom: 1%;
+
+    h2{
+        font-family: "Poppins", sans-serif;
+        font-weight: 700;
+        font-size: 2.5rem;
+        color: #000000;
+        margin-bottom: 2%;
+    }
+
+    h3{
+        font-family: "Inter", sans-serif;
+        font-weight: 400;
+        font-size: 1.5rem;
+        color: #000000;
+        margin-bottom: 3%;
+    }
+
+    .seventh-button{
+        display: flex;
+        justify-content: center;
+        width: 30%;
+        gap: 5%;
+
+        .seventh-button_p{
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+            font-size: 1rem;
+            background-color: #16A34A;
+            color: #FFFFFF;
+            border: none;
+            border-radius: 6px;
+            padding: 2% 5%;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover{
+                cursor: pointer;
+                transform: translateY(-4px);
+                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            }
+        }
+
+        .seventh-button_q{
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+            font-size: 1rem;
+            color: #16A34A;
+            background-color: transparent;
+            border: solid 1px #16A34A;
+            border-radius: 6px;
+            padding: 2% 8%;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+            &:hover{
+                cursor: pointer;
+                transform: translateY(-4px);
+                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            }
+        }
+    }
+}
+
+.octave-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1% 3%;
+    background-color: #1F2937;
+    height: 25vh;
+
+    .octave-section_1{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        img{
+            width: 40%;
+            margin-bottom: 4%;
+        }
+        
+        p{
+            color: #9CA3AF;
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+            font-size: 1rem;
+            width: 20vw;
+        }
+    }
+
+    .octave-section_2{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        p{
+            color: #FFFFFF;
+            font-family: "Poppins", sans-serif;
+            font-weight: 700;
+            font-size: 1rem;
+            margin-bottom: 10%;
+        }
+
+        ul{
+            list-style: none;
+
+            li{
+                margin-bottom: 2%;
+
+                a{
+                    text-decoration: none;
+                    color: #9CA3AF;
+                    font-family: "Poppins", sans-serif;
+                    font-weight: 400;
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+
+    .octave-section_3{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        p{
+            color: #FFFFFF;
+            font-family: "Poppins", sans-serif;
+            font-weight: 700;
+            font-size: 1rem;
+            margin-bottom: 10%;
+        }
+
+        ul{
+            list-style: none;
+
+            li{
+                margin-bottom: 2%;
+
+                a{
+                    text-decoration: none;
+                    color: #9CA3AF;
+                    font-family: "Poppins", sans-serif;
+                    font-weight: 400;
+                    font-size: 1rem;
+                }
+            }
+        }
+    }
+
+    .octave-section_4{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .octave-section_text{
+            color: #FFFFFF;
+            font-family: "Poppins", sans-serif;
+            font-weight: 700;
+            font-size: 1rem;
+            margin-bottom: 2%;
+        }
+
+        .octave-section_text_1{
+            color: #9CA3AF;
+            font-family: "Poppins", sans-serif;
+            font-weight: 400;
+            font-size: 1rem;
+            margin-bottom: 4%;
+            width: 20vw;
+        }
+
+        .icons-social-media{
+            display: flex;
+            gap: 6%;
+
+            a img{
+                width: 100%;
+            }
+        }
+    }
+}
+
