--- a/style.css
+++ b/style.css
@@ -577,4 +577,17 @@ header nav button:hover {
 }
 .octave-section .octave-section_4 .icons-social-media a img {
   width: 100%;
+}
+
+.footer {
+  background-color: #1F2937;
+  text-align: center;
+  border-top: 1px solid #4B5563;
+}
+.footer p {
+  color: #9CA3AF;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 10vh;
 }/*# sourceMappingURL=style.css.map */
