--- a/style.scss
+++ b/style.scss
@@ -657,3 +657,16 @@ header{
     }
 }
 
+.footer{
+    background-color: #1F2937;
+    text-align: center;
+    border-top: 1px solid #4B5563;
+
+    p{
+        color: #9CA3AF;
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-size: 1rem;
+        line-height: 10vh;
+    }
+}
