--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ header nav ul a {
   text-decoration: none;
   color: #4B5563;
 }
+header nav ul a:hover {
+  color: #16A34A;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
 header nav button {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
