--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,12 @@ header{
             a{
                 text-decoration: none;
                 color: #4B5563;
+
+                &:hover{
+                    color: #16A34A;
+                    transition: color 0.3s ease;
+                    cursor: pointer;
+                }
             }
         }
 
